--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@ description graphique des variables aléatoires</p>
 			<p>Ne pas utiliser la balise b (gras) mais strong: <b>non</b> <strong>oui</strong>.</p>
 			<p>Ne pas utiliser la balise i (italique) mais em (emphase): <i>non</i> <em>oui</em>.</p> 
 			<h2>Préambules</h2>
-			<p></p>
+			<p>L'inférence bayésienne est une méthode d'inférence permettant de déduire la probabilité d'un événement à partir de celles d'autres événements déjà évalués. C'est pourquoi on peut qualifier cette méthode d'empirique. Elle s'appuie principalement sur le théorème de Bayes.</p>
+			<p>Dans la logique d'Aristote développée dans l'algèbre de Boole et le calcul des propositions, une proposition ne peut être que vraie ou fausse, et les règles d'inférence ne font intervenir que ces deux valeurs.</p>
+			<p>Le raisonnement bayésien s'intéresse aux cas où une proposition pourrait être vraie ou fausse, non pas en raison de son rapport logique à des axiomes tenus pour assurément vrais, mais selon des observations où subsiste une incertitude. On attribue à toute proposition une valeur entre 0 (faux à coup sûr) et 1 (vrai à coup sûr). S'il s'agit d'un événement pouvant avoir plus de deux issues possibles, on considère la distribution de probabilité de ces issues. L'inférence bayésienne révise la probabilité des propositions au fur et à mesure des observations, incluant, dans l'analyse de Thomas Bayes qui lui donne son nom, la première opinion (a priori) sur la probabilité des prémisses.</p>
+
+			<p>Le raisonnement bayésien interprète la probabilité comme la traduction numérique d'un état de connaissance, du degré de confiance accordé à une hypothèse (voir le théorème de Cox-Jaynes). Jaynes utilisait à ce sujet avec ses étudiants la métaphore d'un robot à logique inductive. Pour les autres disciplines des statistiques et des probabilités, il s'agit du passage à la limite de la fréquence d'un événement.</p>
 			<h2>Origines</h2>
 			<p>
 			Le théorème de Bayes est utilisé dans l’inférence statistique pour mettre à jour ou actualiser les estimations d’une probabilité ou d’un paramètre quelconque, à partir des observations et des lois de probabilité de ces observations. Il y a une version discrète et une version continue du théorème.
 
 L’école bayésienne utilise les probabilités comme moyen de traduire numériquement un degré de connaissance (la théorie mathématique des probabilités n’oblige en effet nullement à associer celles-ci à des fréquences, qui n’en représentent qu’une application particulière résultant de la loi des grands nombres). Dans cette optique, le théorème de Bayes peut s’appliquer à toute proposition, quelle que soit la nature des variables et indépendamment de toute considération ontologique.
 L’école fréquentiste utilise les propriétés de long terme de la loi des observations et ne considère pas de loi sur les paramètres, inconnus mais fixés.
-			
 			</p>
 			<h2>Principes</h2>
 			<p>Nous souhaiterions adapté les réseaux de Bayésiens au cas des fluctuations de la bourse</p>
@@ -60,6 +63,7 @@ L’école fréquentiste utilise les propriétés de long terme de la loi des ob
 			<p>TODO quels sont les avantages et les inconvénients de cette approche?</p>
 			<h2>Bibliographie</h2>
 			<p>A classer par ordre alphabétique de référence</p>
+			<p>https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne</p>
 			<ul>
 				<li id="as2010"><emph>as2000:</emph>Alexandre Saidi, 2010: Titre, Revue, Editeur</li>
 				<li id="bm2014"><emph>bm2014:</emph> Bruno Mascret, 2014: Titre, Revue, Editeur</li>
