--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ description graphique des variables aléatoires</p>
 			<p>Ne pas utiliser br.</p>
 			<p>Ne pas utiliser la balise b (gras) mais strong: <b>non</b> <strong>oui</strong>.</p>
 			<p>Ne pas utiliser la balise i (italique) mais em (emphase): <i>non</i> <em>oui</em>.</p> 
+			<p>Hello World</p>
 			<h2>Préambules</h2>
 			<p>L'inférence bayésienne est une méthode d'inférence permettant de déduire la probabilité d'un événement à partir de celles d'autres événements déjà évalués. C'est pourquoi on peut qualifier cette méthode d'empirique. Elle s'appuie principalement sur le théorème de Bayes.</p>
 			<p>Dans la logique d'Aristote développée dans l'algèbre de Boole et le calcul des propositions, une proposition ne peut être que vraie ou fausse, et les règles d'inférence ne font intervenir que ces deux valeurs.</p>
