Update "circulation de l'information"

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@ L’école fréquentiste utilise les propriétés de long terme de la loi des ob
 			<p>Vous pouvez utiliser des sous-parties si besoin: h3,h4 et h5 (pas de niveau >h5)
 			<h4>Grap orienté acyclique: construction des graphes</h4>
 			<h4>circulation de l'information(causalité)</h4>
+			<p>Dans un réseau bayésien la circulation de l'informations est représenter par le sens des arcs.</p>
+			<p>(l'information est qualititative)</p>
+			<p>Elles représentent l'influence entre les différentes informations.</p>
+			<p>
+				<ul>
+					<li>connexion convergente: deux informations mène à la même conclusion</li>
+					<li>connexion en série: l'association de cause produit un effet</li>
+					<li>connexion divergente: une cause engendre deux effets distincts</li>
+				</ul>
+			<p>Un noeud dépend uniquement de ses parents</p>
 			<h4>Les inférences </h4>
 			</p>
 			<h2>Utilisations</h2>
