--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ L’école fréquentiste utilise les propriétés de long terme de la loi des ob
 			<p>Vous pouvez utiliser des sous-parties si besoin: h3,h4 et h5 (pas de niveau >h5)
 			<h4>Grap orienté acyclique: construction des graphes</h4>
 			<h4>circulation de l'information(causalité)</h4>
-			<p>Dans un réseau bayésien la circulation de l'informations est représenter par le sens des arcs.</p>
-			<p>(l'information est qualititative)</p>
+			<p>Dans un réseau bayésien la circulation de l'informations est représenter par le sens des arcs.
+			<em>(l'information est qualititative)</em></p>
 			<p>Elles représentent l'influence entre les différentes informations.</p>
 			<p>
 				<ul>
