--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@ description graphique des variables aléatoires</p>
 			<p>Le raisonnement bayésien interprète la probabilité comme la traduction numérique d'un état de connaissance, du degré de confiance accordé à une hypothèse (voir le théorème de Cox-Jaynes). Jaynes utilisait à ce sujet avec ses étudiants la métaphore d'un robot à logique inductive. Pour les autres disciplines des statistiques et des probabilités, il s'agit du passage à la limite de la fréquence d'un événement.</p>
 			<h2>Origines</h2>
 			<p>
-			Le théorème de Bayes est utilisé dans l’inférence statistique pour mettre à jour ou actualiser les estimations d’une probabilité ou d’un paramètre quelconque, à partir des observations et des lois de probabilité de ces observations. Il y a une version discrète et une version continue du théorème.
-
-L’école bayésienne utilise les probabilités comme moyen de traduire numériquement un degré de connaissance (la théorie mathématique des probabilités n’oblige en effet nullement à associer celles-ci à des fréquences, qui n’en représentent qu’une application particulière résultant de la loi des grands nombres). Dans cette optique, le théorème de Bayes peut s’appliquer à toute proposition, quelle que soit la nature des variables et indépendamment de toute considération ontologique.
-L’école fréquentiste utilise les propriétés de long terme de la loi des observations et ne considère pas de loi sur les paramètres, inconnus mais fixés.
+			<p>Les réseaux Bayésiens sont nommés en référence au travaux du mathématicien Thomas Bayes.</p>
+			<p>Le théorème de Bayes appelé aussi « probabilité des causes » découle des probabilités conditionnelles et des probabilités totales,</p>
+<br/><p>En intelligence Artificielle les systèmes doivent être évolutif et apprendre de leurs expérience afin de comprendre les liens entre les causes et les effets dans le but de faire évoluer son comportement
+en prenant la décision la plus approprié en fonction de son environnement. </p>
+		
 			</p>
 			<h2>Principes</h2>
 			<p>Nous souhaiterions adapté les réseaux de Bayésiens au cas des fluctuations de la bourse</p>
