remove some crap + add images

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 				<h2>Résumé</h2>
 				<p>Modèles de représentation des connaissances, fondés sur une 
 					description graphique des variables aléatoires</p>
-				<p>Pour citer une source, utilisez la balise "cite": d'après le cours d'IA <cite><a href="#bm2014">[bm2014]</a></cite>, ......</p>
+			<!--	<p>Pour citer une source, utilisez la balise "cite": d'après le cours d'IA <cite><a href="#bm2014">[bm2014]</a></cite>, ......</p>
 				<p>Tout texte doit être encadré par des balises (p, span, etc.).</p>
 				<p>Ne pas utiliser br.</p>
 				<p>Ne pas utiliser la balise b (gras) mais strong: <b>non</b> <strong>oui</strong>.</p>
-				<p>Ne pas utiliser la balise i (italique) mais em (emphase): <i>non</i> <em>oui</em>.</p> 
+				<p>Ne pas utiliser la balise i (italique) mais em (emphase): <i>non</i> <em>oui</em>.</p> -->
 				<h2>Préambules</h2>
 				<p>L'inférence bayésienne est une méthode d'inférence permettant de déduire la probabilité d'un événement à partir de celles d'autres événements déjà évalués. C'est pourquoi on peut qualifier cette méthode d'empirique. Elle s'appuie principalement sur le théorème de Bayes.</p>
 				<p>Dans la logique d'Aristote développée dans l'algèbre de Boole et le calcul des propositions, une proposition ne peut être que vraie ou fausse, et les règles d'inférence ne font intervenir que ces deux valeurs.</p>
@@ -67,6 +67,7 @@
 					<li>connexion en série: l'association de cause produit un effet</li>
 					<li>connexion divergente: une cause engendre deux effets distincts</li>
 				</ul>
+				<img style="width: 700px;height: auto;" src="images/connexion.png" alt="connexion"/>
 				<p>Un noeud dépend uniquement de ses parents</p>
 				<h4>Les inférences </h4>
 				<p></p>
@@ -76,10 +77,9 @@
 				<p>TODO quels sont les avantages et les inconvénients de cette approche?</p>
 				<h2>Bibliographie</h2>
 				<p>A classer par ordre alphabétique de référence</p>
-				<p>https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne</p>
+				<p><a href="https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne">Réseau Bayésiens Wikipédia</a></p>
 				<ul>
-					<li id="as2010"><emph>as2000:</emph>Alexandre Saidi, 2010: Titre, Revue, Editeur</li>
-					<li id="bm2014"><emph>bm2014:</emph> Bruno Mascret, 2014: Titre, Revue, Editeur</li>
+					
 				</ul>
 			</div>
 		</main>
