--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
 			<p>TODO comment et où l'approche a été utilisée, pourquoi</p>
 			<h2>Critique</h2>
 			<p>TODO quels sont les avantages et les inconvénients de cette approche?</p>
+			<h3>Avantages</h3>
+			<p>La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production</p>
+			<p>La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision)</p>
+			<p>Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...)</p>
+			<p>Des méthodes d'apprentissages existent</p>
+			<h3>Limites</h3>
+			<p>L'utilisation des probabilités et leur donnée par l'expert sont problématiques</p>
+			<p>Problème des variables continues</p>
+			<p>Complexité des algorithmes</p>
 			<h2>Bibliographie</h2>
 			<p>A classer par ordre alphabétique de référence</p>
 			<p><a href="https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne">Réseau Bayésiens Wikipédia</a></p>
