Graph orienté acyclique

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 				<p>En intelligence Artificielle les systèmes doivent être évolutif et apprendre de leurs expérience afin de comprendre les liens entre les causes et les effets dans le but de faire évoluer son comportement
 					en prenant la décision la plus approprié en fonction de son environnement. </p>
 
-
 				<h2>Principes</h2>
 				<h4>Grap orienté acyclique: construction des graphes</h4>
+				<p>Les réseaux Bayésiens sont des modèles graphique probabiliste</p>
+				<p></p>
 				<h4>circulation de l'information(causalité)</h4>
 				<p>Dans un réseau bayésien la circulation de l'informations est représenter par le sens des arcs.
 					<em>(l'information est qualititative)</em></p>
