--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 				<p>Elles représentent l'influence entre les différentes informations.</p>
 				<p>
 				<ul>
-					<li>connexion convergente: deux informations mène à la même conclusion</li>
-					<li>connexion en série: l'association de cause produit un effet</li>
-					<li>connexion divergente: une cause engendre deux effets distincts</li>
+					<li> Connexion convergente: deux informations mène à la même conclusion</li>
+					<li> Connexion en série: l'association de cause produit un effet</li>
+					<li> Connexion divergente: une cause engendre deux effets distincts</li>
 				</ul>
 				<img style="width: 700px;height: auto;" src="images/connexion.png" alt="connexion"/>
 				<p>Un noeud dépend uniquement de ses parents</p>
@@ -150,20 +150,23 @@
 				
 				<h2>Critique</h2>
 				<h3>Avantages</h3>
-				<p>Base de données relativement riche pour l’apprentissage</p>
-				<p>La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production</p>
-				<p>La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision)</p>
-				<p>Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...)</p>
-				<p>Apprentissage avec des données incomplètes.</p>
-				<p>Modèle évolutif</p>
-				<p>Outil explicite de modélisation</p>
-				<p>Intégration de connaissances hétérogènes (Experts - données)</p>
+				<ul>
+					<li> La base de données relativement riche pour l’apprentissage;</li>
+					<li> La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production;</li>
+					<li> La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision);</li>
+					<li> Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...);</li>
+					<li> L'apprentissage est possible avec des données incomplètes et permet d'intégrer des connaissances hétérogènes;</li>
+					<li> Le modèle est évolutif;</li>
+					<li> Il s'agit d'un outil explicite de modélisation;</li>
+				</ul>
 				<h3>Limites</h3>
-				<p>L'utilisation des probabilités et leur donnée par l'expert sont problématiques</p>
-				<p>Problème des variables continues</p>
-				<p>Complexité des algorithmes</p>
-				<p> Tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité</p>
-				
+				<ul>
+					<li> L'utilisation des probabilités et leur donnée par l'expert sont problématiques;</li>
+					<li> Il existe un problème de variables continues;</li>
+					<li> La complexité des algorithmes peut parfois poser problème;</li>
+					<li> Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité.</li>
+				</ul>
+
 				<h2>Bibliographie</h2>
 				<p>A classer par ordre alphabétique de référence</p>
 				<p><a href="https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne">Réseau Bayésiens Wikipédia</a></p>
