Data added in "Critique"

--- a/index.html
+++ b/index.html
@@ -162,20 +162,30 @@
 			<h2>Critique</h2>
 			<h3>Avantages</h3>
 			<ul>
-				<li> La base de données relativement riche pour l’apprentissage;</li>
-				<li> La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production;</li>
-				<li> La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision);</li>
-				<li> Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...);</li>
+				<li> La représentation des relations causales entre les variables d'un système est transparente et explicite;</li>
+				<li> Les réseaux bayésiens utilisent une grande variété de données en entrée;</li>					
+				<li> Il est possible de représenter des évènements incertains;</li>
+				<li> Il existe des outils visuels d'aide à la décision;</li>
 				<li> L'apprentissage est possible avec des données incomplètes et permet d'intégrer des connaissances hétérogènes;</li>
-				<li> Le modèle est évolutif;</li>
-				<li> Il s'agit d'un outil explicite de modélisation;</li>
+				<li> Le modèle est évolutif et accepte l'ajout de nouvelles données;</li>
+
+				
+				<li> (La base de données relativement riche pour l’apprentissage;)</li>
+				<li> (La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production;)</li>
+				<li> (La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision);)</li>
+				<li> (Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...);)</li>
 			</ul>
 			<h3>Limites</h3>
 			<ul>
-				<li> L'utilisation des probabilités et leur donnée par l'expert sont problématiques;</li>
-				<li> Il existe un problème de variables continues;</li>
-				<li> La complexité des algorithmes peut parfois poser problème;</li>
-				<li> Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité.</li>
+				<li> Il est peut s'avérer difficile d'être d'accord avec les experts concernant la structure du réseau bayésien;</li>
+				<li> La table de probabilité conditionelle est compliquée à définir avec l'avis de l'expert; </li>
+				<li> Il existe un problème de représentation des variables continues, en effet car les probabilités sont discrètes et non continues;</li>
+				<li> Le modèle ne tient pas compte d'un temps ou d'un espace dynamique;</li>
+				<li> Il n'existe pas de boucles de rétroaction.</li>
+				
+				<li> (L'utilisation des probabilités et leur donnée par l'expert sont problématiques;)</li>
+				<li> (La complexité des algorithmes peut parfois poser problème;)</li>
+				<li> (Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité.)</li>
 			</ul>
 
 			<h2>Bibliographie</h2>
@@ -184,6 +194,7 @@
 			<p><a href="http://share.iscpif.fr/ideas2011/slides/Intro_RBD.pdf">Institut des systèmes complexe - Introduction aux réseaux
 				Bayésiens dynamiques</a></p>
 			<p><a href="http://www.math-info.univ-paris5.fr/~bouzy/Doc/AA1/ReseauxBayesiens.pdf">Réseau Bayésiens Bruno Bouzy</a></p>
+			<p><a href="http://www.utas.edu.au/__data/assets/pdf_file/0011/588467/TR_9_BNs_for_Integrated_Catchment_Management.pdf">A beginners guide to Bayesian network modelling for integrated catchment management</a></p>
 
 			<ul>
 			</ul>
