--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 				Bayésiens dynamiques</a></p>
 			<p><a href="http://www.math-info.univ-paris5.fr/~bouzy/Doc/AA1/ReseauxBayesiens.pdf">Réseau Bayésiens Bruno Bouzy</a></p>
 			<p><a href="http://www.utas.edu.au/__data/assets/pdf_file/0011/588467/TR_9_BNs_for_Integrated_Catchment_Management.pdf">A beginners guide to Bayesian network modelling for integrated catchment management</a></p>
+				<p><a href="http://www-old.enit.fr/perso/francois/index/Recherche/Recherche_personnelle/Documents%20PDF%20enseignement/bayes.pdf">Enit Bayes</a></p>
 
 			<ul>
 			</ul>
