--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<p>Les réseaux sont acyclique car les effets ne peuvent pas influencé les causes, ils sont également orientés afin de représenter les dépendances entre les variables</p>
 
 
-				Pour construire un graph: 
+				Pour construire un graph il faut: 
 				<ul>
 					<li>définr les variables et leurs modalité </li>
 					<li>établir les liens entre les varaibles </li>
@@ -233,10 +233,10 @@
 					<li> Le modèle est évolutif et accepte l'ajout de nouvelles données;</li>
 
 
-					<li> (La base de données relativement riche pour l’apprentissage;)</li>
-					<li> (La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production;)</li>
-					<li> (La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision);)</li>
-					<li> (Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...);)</li>
+					<li> La base de données relativement riche pour l’apprentissage;)</li>
+					<li> La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production</li>
+					<li> La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision</li>
+					<li> Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...)</li>
 				</ul>
 				<h3>Limites</h3>
 				<ul>
@@ -246,9 +246,9 @@
 					<li> Le modèle ne tient pas compte d'un temps ou d'un espace dynamique;</li>
 					<li> Il n'existe pas de boucles de rétroaction.</li>
 
-					<li> (L'utilisation des probabilités et leur donnée par l'expert sont problématiques;)</li>
-					<li> (La complexité des algorithmes peut parfois poser problème;)</li>
-					<li> (Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité.)</li>
+					<li> L'utilisation des probabilités et leur donnée par l'expert sont problématiques</li>
+					<li> La complexité des algorithmes peut parfois poser problème</li>
+					<li> Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité.</li>
 				</ul>
 
 				<h2>Bibliographie</h2>
