bibliographie sous forme de liste

--- a/index.html
+++ b/index.html
@@ -253,15 +253,14 @@
 
 				<h2>Bibliographie</h2>
 				<p>A classer par ordre alphabétique de référence</p>
-				<p><a href="https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne">Réseau Bayésiens Wikipédia</a></p>
-				<p><a href="http://share.iscpif.fr/ideas2011/slides/Intro_RBD.pdf">Institut des systèmes complexe - Introduction aux réseaux
-					Bayésiens dynamiques</a></p>
-				<p><a href="http://www.math-info.univ-paris5.fr/~bouzy/Doc/AA1/ReseauxBayesiens.pdf">Réseau Bayésiens Bruno Bouzy</a></p>
-				<p><a href="http://www.utas.edu.au/__data/assets/pdf_file/0011/588467/TR_9_BNs_for_Integrated_Catchment_Management.pdf">A beginners guide to Bayesian network modelling for integrated catchment management</a></p>
-				<p><a href="http://www-old.enit.fr/perso/francois/index/Recherche/Recherche_personnelle/Documents%20PDF%20enseignement/bayes.pdf">Enit Bayes</a></p>
-				<p><a href="http://www.egc.asso.fr/sdoc-101-egc08_tutoriel_reseaux_bayesiens.pdf">tutoriel réseau Bayésiens</a></p>
-
 				<ul>
+					<li><a href="https://fr.wikipedia.org/wiki/Inf%C3%A9rence_bay%C3%A9sienne">Réseau Bayésiens Wikipédia</a></li>
+					<li><a href="http://share.iscpif.fr/ideas2011/slides/Intro_RBD.pdf">Institut des systèmes complexe - Introduction aux réseaux
+						Bayésiens dynamiques</a></li>
+					<li><a href="http://www.math-info.univ-paris5.fr/~bouzy/Doc/AA1/ReseauxBayesiens.pdf">Réseau Bayésiens Bruno Bouzy</a></li>
+					<li><a href="http://www.utas.edu.au/__data/assets/pdf_file/0011/588467/TR_9_BNs_for_Integrated_Catchment_Management.pdf">A beginners guide to Bayesian network modelling for integrated catchment management</a></li>
+					<li><a href="http://www-old.enit.fr/perso/francois/index/Recherche/Recherche_personnelle/Documents%20PDF%20enseignement/bayes.pdf">Enit Bayes</a></li>
+					<li><a href="http://www.egc.asso.fr/sdoc-101-egc08_tutoriel_reseaux_bayesiens.pdf">tutoriel réseau Bayésiens</a></li>
 				</ul>
 			</div>
 		</main>
