update meta data

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>IA: Réseaux Bayésiens</title>
-		<meta name="description" content="TODO une phrase résumant le contenu de votre page"/>
-		<meta name="author" content="TODO prénom et nom des auteurs, séparés par une virgule: Jean Dupont, Marc Lemoi"/>
-		<meta name="keywords" content="TODO compléter la iste des mots-clefs: Intelligence artificielle, CPE, ..."/>
+		<meta name="description" content="Définitions et utilisations des Réseaux Bayésiens"/>
+		<meta name="author" content="Sébastien André, Côme Burguburu, Benjamin Jornet, Emilien Lasne, Raphaël Tata
+
+"/>
+		<meta name="keywords" content="Intelligence artificielle, CPE, Réseau Bayésiens, probabilité, inférences, apprentissage"/>
 		<meta name="revisit-after" content="7 days"/>
 		<meta name="robots" content="index,follow,all"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
